@@ -1,25 +1,26 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.config.server.application;
 
+import ai.vespa.http.DomainName;
+import ai.vespa.http.HttpURL;
+import ai.vespa.http.HttpURL.Path;
+import ai.vespa.http.HttpURL.Query;
+import ai.vespa.http.HttpURL.Scheme;
 import com.google.inject.Inject;
 import com.yahoo.config.model.api.HostInfo;
 import com.yahoo.config.model.api.PortInfo;
 import com.yahoo.config.model.api.ServiceInfo;
 import com.yahoo.container.jdisc.HttpResponse;
-
-import java.util.HashSet;
-import java.util.List;
-import java.util.logging.Level;
 import com.yahoo.vespa.config.server.http.HttpErrorResponse;
 import com.yahoo.vespa.config.server.http.HttpFetcher;
+import com.yahoo.vespa.config.server.http.HttpFetcher.Params;
 import com.yahoo.vespa.config.server.http.NotFoundException;
 import com.yahoo.vespa.config.server.http.SimpleHttpFetcher;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.util.List;
+import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class HttpProxy {
 
@@ -33,7 +34,7 @@ public class HttpProxy {
         this.fetcher = fetcher;
     }
 
-    public HttpResponse get(Application application, String hostName, String serviceType, String relativePath) {
+    public HttpResponse get(Application application, String hostName, String serviceType, Path path, Query query) {
         HostInfo host = application.getModel().getHosts().stream()
                 .filter(hostInfo -> hostInfo.getHostname().equals(hostName))
                 .findFirst()
@@ -51,21 +52,18 @@ public class HttpProxy {
                                .findFirst()
                                .orElseThrow(() -> new NotFoundException("Failed to find HTTP state port"));
 
-        return internalGet(host.getHostname(), port.getPort(), relativePath);
+        return internalGet(host.getHostname(), port.getPort(), path, query);
     }
 
-    private HttpResponse internalGet(String hostname, int port, String relativePath) {
-        String urlString = "http://" + hostname + ":" + port + "/" + relativePath;
-        URL url;
+    private HttpResponse internalGet(String hostname, int port, Path path, Query query) {
+        HttpURL url = HttpURL.create(Scheme.http, DomainName.of(hostname), port, path, query);
         try {
-            url = new URL(urlString);
+            return fetcher.get(new Params(2000), // 2_000 ms read timeout
+                               url.asURI().toURL());
         } catch (MalformedURLException e) {
-            logger.log(Level.WARNING, "Badly formed url: " + urlString, e);
+            logger.log(Level.WARNING, "Badly formed url: " + url, e);
             return HttpErrorResponse.internalServerError("Failed to construct URL for backend");
         }
-
-        HttpFetcher.Params params = new HttpFetcher.Params(2000); // 2_000 ms read timeout
-        return fetcher.get(params, url);
     }
 
 }
